--- a/src/Components/Header/index.module.css
+++ b/src/Components/Header/index.module.css
@@ -9,13 +9,14 @@
 .navbar {
     display: flex;
     width: 80%;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 }
 
 .navbar_group {
     display: flex;
     gap: 30px;
+    margin: 0 30px;
 }
 
 .navbar_option_selected {
