ajustando grid pros parceiros

--- a/src/Components/Partner/index.module.css
+++ b/src/Components/Partner/index.module.css
@@ -103,6 +103,9 @@ color: #FFFFFF;
 @media only screen and (max-width: 640px) {
     .partners{
         gap: 0px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 144px;
     }
     .whiteCat{
         display: none;
